[package]
name = "rustls-test"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2.0"
webpki = "0.21.4"
